syntax = "proto3";

package eth.erc20.v1;

message Transfers {
  repeated Transfer transfers = 1;
}

message Transfer {
  string from = 1;
  string to = 2;
  string amount = 3;
  repeated BalanceChange balance_change_from = 4;
  repeated BalanceChange balance_change_to = 5;
  uint64 log_ordinal = 6;
}

message BalanceChange {
  string old_balance = 1;
  string new_balance = 2;
}
